Fixed spacing issues, only redux and listener stuff now

--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@ li {
 
 .chat-scrollable {
     overflow: auto;
-    height: 100%;
+    height: 92vh;
     width: 100%;
 }
 
